# GRLeaf

./: README.md  docker-compose.dev.yml  docker-compose.yml  run.sh
backend/: Dockerfile  Dockerfile.worker  main.py  models.py  pyproject.toml  requirments.txt  worker.py
backend/builds/69455a31efdf20f50de66cc3/: main.tex
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @codemirror.js  @lezer.js  @marijn.js  @swc.js  @uiw.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  crelt.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  lucide-react.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  style-mod.js  supports-color.js  w3c-keyname.js
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 2c2c8948dbee0e6a.webpack.hot-update.json  7d063e1d15c194fa.webpack.hot-update.json  webpack.0352d1e739f6d90e.hot-update.js  (+34 more)
frontend/app/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: auth.ts
(+54 files in other folders)
