[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "beanie>=2.0.1",
    "celery>=5.6.0",
    "fastapi>=0.125.0",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
